--- a/module/yxzb.html
+++ b/module/yxzb.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="right_bottom">
                     <ul class="list">
-                        <li><span>在途</span><br><span id="zt">1223</span></li>
+                        <li><span>在途</span><br><span id="zt">1223333</span></li>
                         <li><span>存储</span><br><span id="kc">1223</span></li>
                         <li><span>领用</span><br><span id="ly">1223</span></li>
                         <li><span>整机</span><br><span id="zj">1223</span></li>
