修改文件信息

--- a/module/xbdq.html
+++ b/module/xbdq.html
@@ -5,25 +5,26 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>数据统计</title>
+    <title>大区数据统计</title>
     <!-- 自定义css -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/xbdq.css">
 </head>
 
-<body class="xb">
+<body>
     <div id="xb"></div><div id="hb"></div><div id="hd"></div><div id="hn"></div><div id="xj"></div><div id="xn"></div>
-    <div class="containers">
+    <div class="xb" id="containers">
+        <div class="containers containers-son">
         <div class="title">西北大区数据统计</div>
         <div class="row">
             <div class="col">
                 <div class="zb">
-                    <div id="kh">34</div>
-                    <div id="xm">23</div>
-                    <div id="sb">3333</div>
-                    <div id="gd">444</div>
-                    <div id="gcs">444</div>
-                    <div id="bj">555</div>
+                    <div id="kh">0</div>
+                    <div id="xm">0</div>
+                    <div id="sb">0</div>
+                    <div id="gd">0</div>
+                    <div id="gcs">0</div>
+                    <div id="bj">0</div>
                 </div>
                 <div id="sb_bar" class="sb-bar"></div>
             </div>
@@ -48,48 +49,49 @@
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li><li>
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li><li>
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li><li>
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li><li>
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li><li>
                         <div class="dian"></div>
                         <div>
                             <span class="name">事件工单</span>
-                            <span class="num">11699</span>
+                            <span class="num">0</span>
                         </div>
                     </li>
                 </ul>
             </div>
         </div>
-        
+    </div>
         <!-- 时间戳 -->
         <div class="data-time">
             <span id="datetime"></span>
             <span id="hourminute"></span>
         </div>
+    
     </div>
     <!-- jQuery -->
     <script src="../jslib/jquery.min.js"></script>
