--- a/module/bmap.html
+++ b/module/bmap.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>全国热力图分布</title>
     <!-- 自定义css -->
     <link rel="stylesheet" href="../css/bmap.css">
 </head>
