--- a/module/yxzb.html
+++ b/module/yxzb.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>银信科技数据统计</title>
     <!-- 自定义css -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/liMarquee.css">
@@ -18,28 +18,28 @@
             <div class="col-9">
                 <div class="left_top">
                     <div class="topCount" id="whsb_num" style="height:50px;width: 234px; position: absolute;left: 42px; top: 42px;"></div>
-                    <div id="xxj" class="num" style="position: absolute;left: 380px; top: 53px;">12312</div>
-                    <div id="fwq" class="num" style="position: absolute;left: 592px; top: 53px;">12312</div>
-                    <div id="cc" class="num" style="position: absolute;left: 805px; top: 53px;">1223</div>
-                    <div id="wlsb" class="num" style="position: absolute;left: 1020px; top: 53px;">1123</div>
-                    <div id="rj" class="num" style="position: absolute;left: 1234px; top: 53px;">1123</div>
+                    <div id="xxj" class="num" style="position: absolute;left: 380px; top: 53px;">000</div>
+                    <div id="fwq" class="num" style="position: absolute;left: 592px; top: 53px;">000</div>
+                    <div id="cc" class="num" style="position: absolute;left: 805px; top: 53px;">000</div>
+                    <div id="wlsb" class="num" style="position: absolute;left: 1020px; top: 53px;">000</div>
+                    <div id="rj" class="num" style="position: absolute;left: 1234px; top: 53px;">000</div>
                 </div>
                 <ul class="left_center">
                     <li>
                         <div id="kh_bar" style="width: 100%; height: 100%;"></div>
-                        <span class="number" id="kh_number" style="left: 571px; top: 7px;">123123</span>
+                        <span class="number" id="kh_number" style="left: 571px; top: 7px;">000</span>
                     </li>
                     <li>
                         <div id="xm_bar" style="width: 100%; height: 100%;"></div>
-                        <span class="number" id="xm_number" style="left: 571px; top: 7px;">123123</span>
+                        <span class="number" id="xm_number" style="left: 571px; top: 7px;">000</span>
                     </li>
                     <li>
                         <div id="gd_bar" style="width: 100%; height: 100%;"></div>
-                        <span class="number" id="gd_number" style="left: 549px; top: 7px;">123123</span>
+                        <span class="number" id="gd_number" style="left: 549px; top: 7px;">000</span>
                     </li>
                     <li>
                         <div id="gcs_bar" style="width: 100%; height: 100%;"></div>
-                        <span class="number" id="gcs_number" style="left: 571px; top: 7px;">123123</span>
+                        <span class="number" id="gcs_number" style="left: 571px; top: 7px;">000</span>
                     </li>
                 </ul>
                 
@@ -60,15 +60,15 @@
             <div class="col">
                 <div class="right_top">
                     <div id="pie" class="pie"></div>
-                    <div id="total" class="num">2,323,232</div>
+                    <div id="total" class="num">00,000,000</div>
                     <ul class="gd_list"></ul>
                 </div>
                 <div class="right_bottom">
                     <ul class="list">
-                        <li><span>在途</span><br><span id="zt">1223333</span></li>
-                        <li><span>存储</span><br><span id="kc">1223</span></li>
-                        <li><span>领用</span><br><span id="ly">1223</span></li>
-                        <li><span>整机</span><br><span id="zj">1223</span></li>
+                        <li><span>在途</span><br><span id="zt">000</span></li>
+                        <li><span>存储</span><br><span id="kc">000</span></li>
+                        <li><span>领用</span><br><span id="ly">000</span></li>
+                        <li><span>整机</span><br><span id="zj">000</span></li>
                     </ul>
                     <div class="bj_bar" id="bj_bar"></div>
                 </div>
