修改百度地图加载留白问题

--- a/module/bmap.html
+++ b/module/bmap.html
@@ -31,7 +31,9 @@
     <!-- echarts -->
     <script src="../jslib/echarts.min.5.4.js"></script>
     <script src="../jslib/bmap.min.js"></script>
-    <script src="https://api.map.baidu.com/api?v=3.0&amp;ak=KvFzmH1an8HONqcrtSkLHeKNzmFQyvbP"></script>
+    <!-- <script src="https://api.map.baidu.com/api?v=3.0&amp;ak=KvFzmH1an8HONqcrtSkLHeKNzmFQyvbP"></script> -->
+    <!-- 解决百度地图瓦片加载过慢留白问题 -->
+    <script src="https://api.map.baidu.com/getscript?v=4.0&ak=KvFzmH1an8HONqcrtSkLHeKNzmFQyvbP"></script>
     <!-- 时间插件 -->
     <script src="../jslib/moment.js"></script>
     <!-- 界面缩放适配 -->
